nexus-rt/tests/ui/view_derive_on_enum.stderr
error: #[derive(View)] can only be used on structs
 --> tests/ui/view_derive_on_enum.rs:8:6
  |
8 | enum BadView {
  |      ^^^^^^^
